generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id          Int       @id @default(autoincrement())
  name        String
  email       String    @unique
  password    String
  phoneNumber String    @unique
  joinedAt    DateTime  @default(now())
  updatedAt   DateTime  @updatedAt
  addresses   Address[]
  cart        Cart?
  orders      Order[]
}

model Address {
  id           Int     @id @default(autoincrement())
  governorate  String
  city         String
  addressLine1 String
  addressLine2 String?
  postalCode   String?
  userId       Int
  user         User    @relation(fields: [userId], references: [id])
  orders       Order[]
}

model Product {
  id          Int         @id @default(autoincrement())
  name        String      @unique
  description String
  price       Float
  stock       Int
  createdAt   DateTime    @default(now())
  updatedAt   DateTime    @updatedAt
  cartItems   CartItem[]
  orderItems  OrderItem[]
}

model Order {
  id         Int         @id @default(autoincrement())
  userId     Int
  addressId  Int
  status     Status      @default(PENDING)
  total      Float
  discount   Decimal?
  createdAt  DateTime    @default(now())
  updatedAt  DateTime    @updatedAt
  address    Address     @relation(fields: [addressId], references: [id])
  user       User        @relation(fields: [userId], references: [id], onDelete: Cascade)
  orderItems OrderItem[]
}

model OrderItem {
  id        Int     @id @default(autoincrement())
  quantity  Int
  orderId   Int
  productId Int
  order     Order   @relation(fields: [orderId], references: [id], onDelete: Cascade)
  product   Product @relation(fields: [productId], references: [id], onDelete: Cascade)

  @@unique([orderId, productId])
}

model Cart {
  id        Int        @id @default(autoincrement())
  createdAt DateTime   @default(now())
  updatedAt DateTime   @updatedAt
  userId    Int        @unique
  user      User       @relation(fields: [userId], references: [id], onDelete: Cascade)
  cartItems CartItem[]
}

model CartItem {
  id        Int     @id @default(autoincrement())
  quantity  Int
  cartId    Int
  productId Int
  cart      Cart    @relation(fields: [cartId], references: [id], onDelete: Cascade)
  product   Product @relation(fields: [productId], references: [id], onDelete: Cascade)

  @@unique([cartId, productId])
}

enum Status {
  PENDING
  CONFIRMED
  SHIPPED
  DELIVERED
}
