Table User {
  id Int [pk, increment]
  name String [not null]
  email String [unique, not null]
  password String [not null]
  phoneNumber String [unique, not null]
  joinedAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  addresses Address [not null]
  cart Cart
  orders Order [not null]
}

Table Address {
  id Int [pk, increment]
  governorate String [not null]
  city String [not null]
  addressLine1 String [not null]
  addressLine2 String
  postalCode String
  userId Int [not null]
  user User [not null]
  orders Order [not null]
}

Table Product {
  id Int [pk, increment]
  name String [unique, not null]
  description String [not null]
  price Float [not null]
  stock Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  cartItems CartItem [not null]
  orderItems OrderItem [not null]
}

Table Order {
  id Int [pk, increment]
  userId Int [not null]
  addressId Int [not null]
  status Status [not null, default: 'PENDING']
  total Float [not null]
  discount Decimal
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  address Address [not null]
  user User [not null]
  orderItems OrderItem [not null]
}

Table OrderItem {
  id Int [pk, increment]
  quantity Int [not null]
  orderId Int [not null]
  productId Int [not null]
  order Order [not null]
  product Product [not null]

  indexes {
    (orderId, productId) [unique]
  }
}

Table Cart {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userId Int [unique, not null]
  user User [not null]
  cartItems CartItem [not null]
}

Table CartItem {
  id Int [pk, increment]
  quantity Int [not null]
  cartId Int [not null]
  productId Int [not null]
  cart Cart [not null]
  product Product [not null]

  indexes {
    (cartId, productId) [unique]
  }
}

Enum Status {
  PENDING
  CONFIRMED
  SHIPPED
  DELIVERED
}

Ref: Address.userId > User.id

Ref: Order.addressId > Address.id

Ref: Order.userId > User.id [delete: Cascade]

Ref: OrderItem.orderId > Order.id [delete: Cascade]

Ref: OrderItem.productId > Product.id [delete: Cascade]

Ref: Cart.userId - User.id [delete: Cascade]

Ref: CartItem.cartId > Cart.id [delete: Cascade]

Ref: CartItem.productId > Product.id [delete: Cascade]